# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import profileRouter from "./profile";
 import linksRouter from "./links";
+import analyticsRouter from "./analytics";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(profileRouter);
 router.use(linksRouter);
+router.use(analyticsRouter);
 
 export default router;
