# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./profile";
 export * from "./links";
 export * from "./admin";
+export * from "./analytics";
